Correcting spacing of buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
     border-radius: 10px;
     width: 100px;
     height:30px;
-    margin-right: 10px;
+    margin: 0 5px;
     color: #fff;
     background-color: #000;
     font-size: 1rem;
